<resources>
    <string name="app_name">Gusto Boliviano</string>
    <string name="facebook_app_id">332394123766181</string>
    <string name="googleSignInText">GOOGLE</string>
    <string name="facebookSignInText">FACEBOOK</string>
    <string name="title_activity_edit_profile">Editar Perfíl</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reviews">reviews</string>
    <string name="followers">followers</string>
    <string name="following_lower_case">following</string>
    <string name="follow">FOLLOW</string>
    <string name="unfollow">Unfollow</string>
    <string name="following">FOLLOWING</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="phone">Phone</string>
    <string name="webPage">Web page</string>
    <string name="address">Address</string>
    <string name="search">Search</string>
    <string name="money">$</string>
    <string name="price">Price</string>
    <string name="selectImageFrom">Select Image From:</string>
    <string name="editProfile">Edit Your Profile</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="Success">Success!</string>
    <string name="privateMessage">Private Information</string>
    <string name="name">Name</string>
    <string name="status">Status</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="profileInformation">Profile Information</string>
    <string-array
        name="genre_array">
        <item>Not Specified</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array
        name="languaje_array">
        <item>English</item>
        <item>Español</item>
    </string-array>
    <string name="zero">0</string>
    <string name="sunday">Sun.</string>
    <string name="monday">Mon.</string>
    <string name="tuesday">Tue.</string>
    <string name="wednesday">Wed.</string>
    <string name="thursday">Thu.</string>
    <string name="friday">Fri.</string>
    <string name="saturday">Sat.</string>
    <string name="menu1">Home</string>
    <string name="menu2">Search</string>
    <string name="menu3">Map</string>
    <string name="menu4">Notifications</string>
    <string name="menu5">Profile</string>
    <string name="more">More</string>
    <string name="unFollowMessage1">Stop following</string>
    <string name="unFollowMessage2">\?</string>
    <string name="chooseOptionReport">Choose the reason for reporting this review:</string>
    <string name="rate0">Revolting</string>
    <string name="rate1">Disgusting</string>
    <string name="rate2">Horrible</string>
    <string name="rate3">Delicious!</string>
    <string name="rate4">Yummy!</string>
    <string name="rate5">Tasty!</string>
    <string name="language">language</string>
    <string name="logout">Log Out</string>
    <string name="goodbye">See you soon!</string>
    <string name="noresult">No results found</string>
    <string name="branchP">Main branch</string>
    <string name="branch">branch</string>
    <string name="notspecified">Not specified</string>
    <!-- ICONS -->
    <string name="icon_plus">+</string>
    <!-- OPTIONS -->
    <string name="spam">Spam or Fraud</string>
    <string name="ofensive">Offensive Content</string>
</resources>
