<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.fuzzyapps.gustoboliviano.nav_profileFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/general_margin"
        android:layout_marginLeft="@dimen/general_margin"
        android:layout_marginRight="@dimen/general_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="@dimen/general_margin">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/profileImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:civ_border_color="@color/colorPrimaryDark"
                    app:civ_border_width="4dp"
                    app:civ_shadow_color="@color/colorAccent" />
                <ProgressBar
                    android:id="@+id/profileImageProgressBar"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:max="100"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:visibility="gone"/>
                <TextView
                    android:id="@+id/profileUploadStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Success"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:visibility="gone"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:baselineAligned="false"
                    android:gravity="center">
                    <!--android:layout_marginRight="3dp"-->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center">
                        <TextView
                            android:id="@+id/profileReviewsNumber"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/primaryText"
                            android:textAppearance="?android:attr/textAppearanceMedium"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/reviews"
                            android:textAppearance="?android:attr/textAppearanceSmall"/>
                    </LinearLayout>
                    <!--android:layout_marginRight="3dp"
                        android:layout_marginLeft="3dp"-->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center">
                        <TextView
                            android:id="@+id/profileFollowersNumber"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/primaryText"
                            android:textAppearance="?android:attr/textAppearanceMedium"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/followers"
                            android:textAppearance="?android:attr/textAppearanceSmall"/>
                    </LinearLayout>
                    <!-- android:layout_marginLeft="3dp" -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center">
                        <TextView
                            android:id="@+id/profileFollowingNumber"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/primaryText"
                            android:textAppearance="?android:attr/textAppearanceMedium"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/following_lower_case"
                            android:textAppearance="?android:attr/textAppearanceSmall"/>
                    </LinearLayout>
                </LinearLayout>
                <Button
                    android:id="@+id/profileEditButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="88dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/editProfile"
                    android:layout_marginTop="@dimen/half_general_margin"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white"
                    android:theme="@style/MaterialButton"
                    android:layout_gravity="center" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:id="@+id/linearLayout2">
            <TextView
                android:id="@+id/profileUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primaryText"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:id="@+id/profileStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textStyle="italic" />
            <ImageButton
                android:id="@+id/profileEditStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/half_general_margin"
                android:src="@mipmap/ic_edit_black_24dp"
                android:background="@null"/>
        </LinearLayout>
    </LinearLayout>
    <android.support.design.widget.TabLayout
        android:id="@+id/profileOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabGravity="fill"
        app:tabMode="fixed"/>
    <FrameLayout
        android:id="@+id/profileFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/general_margin"
        android:layout_marginRight="@dimen/general_margin"/>
    <!--
    <Button
        android:id="@+id/upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SUBIR"/>
    <TextView
        android:id="@+id/progressText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/urlUpload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />-->
</LinearLayout>